<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/default_space"
        android:paddingBottom="@dimen/default_space"
        android:id="@+id/search_no_info"
        >
        <ImageView
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:src="@drawable/ic_album_black_24dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_no_search_info"
            android:maxLines="1"
            />

    </LinearLayout>


    <!-- TODO: Update blank fragment layout -->
    <com.app.legend.waraumusic.utils.MyNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/search_fragment_music"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:padding="@dimen/default_space"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_fragment_music_list"
                android:nestedScrollingEnabled="false"
                >


            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/search_fragment_artist"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist"
                android:padding="@dimen/default_space"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_fragment_artist_list"
                android:nestedScrollingEnabled="false"
                >


            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/search_fragment_album"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album"
                android:padding="@dimen/default_space"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_fragment_album_list"
                android:nestedScrollingEnabled="false"
                >


            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

        </LinearLayout>

    </com.app.legend.waraumusic.utils.MyNestedScrollView>

</FrameLayout>
