<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlayingViewFragment"
    android:background="@color/colorWhite"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_play_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:elevation="@dimen/z_height"
        >

        <ImageView
            android:layout_width="@dimen/bottom_play_bar"
            android:layout_height="@dimen/bottom_play_bar"
            android:id="@+id/small_album"
            android:src="@drawable/ic_album_black_24dp"
            android:contentDescription="@string/album"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingStart="@dimen/default_space"
            android:paddingEnd="@dimen/default_space"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/song_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/song"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/playing_bar_text_size"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/song_artist"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/other_text_size"
                android:text="@string/info"
                />


        </LinearLayout>

        <FrameLayout
            android:layout_width="@dimen/bottom_play_bar"
            android:layout_height="match_parent">

            <com.app.legend.waraumusic.utils.RoundProgressBar
                android:layout_width="@dimen/playing_bar_progress"
                android:layout_height="@dimen/playing_bar_progress"
                app:roundWidth="3.5dp"
                android:layout_marginStart="@dimen/progress_bar_margin"
                android:layout_marginTop="@dimen/progress_bar_margin"
                android:id="@+id/playing_bar_progress"
                app:roundColor="@color/colorButton"
                app:roundProgressColor="@color/colorOrange"
                app:max="500"
                />

            <ImageView
                android:layout_width="@dimen/press_space"
                android:layout_height="@dimen/press_space"
                android:layout_gravity="end"
                android:id="@+id/play_bar_button"
                android:src="@drawable/ic_play_arrow_black_16dp"
                android:scaleType="center"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:backgroundTint="@color/colorWhite"
                android:tint="@color/colorGrey"
                />


        </FrameLayout>




    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@color/colorX"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="@dimen/z_height"
        >


    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/play_pager"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


    </android.support.v4.view.ViewPager>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_pager"
        android:background="@color/colorX"
        android:layout_marginStart="@dimen/half_de"
        android:layout_marginEnd="@dimen/half_de"
        android:elevation="@dimen/z_height"

        >

        <TextView
            android:id="@+id/playing_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/progress_bar_margin"
            android:text="@string/time"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="500"
            android:padding="@dimen/progress_bar_margin"
            app:layout_constraintEnd_toStartOf="@+id/time"
            app:layout_constraintStart_toEndOf="@+id/playing_time"
            app:layout_constraintTop_toTopOf="parent"
            android:thumbTint="@color/colorWhite"

            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:padding="@dimen/progress_bar_margin"
            android:text="@string/time"
            android:textColor="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/mode"
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_no_repeat_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.4"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorGrey"
            />

        <ImageView
            android:id="@+id/pre"
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_skip_previous_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/play"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.4"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorGrey"
            />

        <ImageView
            android:id="@+id/play"
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_play_arrow_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.4"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorGrey"
            />

        <ImageView
            android:id="@+id/list"
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_playlist_play_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/next"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.4"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:tint="@color/colorGrey"
            />

        <ImageView
            android:id="@+id/next"
            android:layout_width="@dimen/press_space"
            android:layout_height="@dimen/press_space"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_skip_next_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintVertical_bias="0.39"
            android:tint="@color/colorGrey"
            />


    </android.support.constraint.ConstraintLayout>




</android.support.constraint.ConstraintLayout>